# curso-python

./: LICENSE
01 - Python Fundamentals/00 - Desafios de Código/: 01 - tempoEstimadoEntrega.py  02 - calcularPrecoFinal.py  03 - sobremesaEspecial.py  04 - gerenciamentoPedidos.py  05 - identificandoPedidosVeganos.py
01 - Python Fundamentals/01 - Python POO/: teste.py
01 - Python Fundamentals/03 - Manipulação de arquivos/: 01_operacao_leitura.py  02_operacao_escrita.py  03_os_shutil.py  04_tratamento_erro.py  05_boas_praticas.py  06_csv.py  arquivo-utf-8.txt  lorem.txt  salvar_dados_arquivo.py  usuario.csv
01 - Python Fundamentals/04 - Datas, horas e fuso-horários/: 01_datas.py  04_pytz.py  (+5 more)
02 - Python Backend Developer/03 - Desenvolvimento de APIs com Flask/blog/: pyproject.toml
02 - Python Backend Developer/03 - Desenvolvimento de APIs com Flask/blog/instance/: blog.sqlite
02 - Python Backend Developer/03 - Desenvolvimento de APIs com Flask/blog/migrations/versions/: 564faaba5385_add_password_field.py  9ab328e95a19_initial_migration.py
02 - Python Backend Developer/03 - Desenvolvimento de APIs com Flask/blog/src/: app.py  db.py  utils.py
02 - Python Backend Developer/03 - Desenvolvimento de APIs com Flask/blog/src/controllers/: auth.py  post.py  role.py  user.py
02 - Python Backend Developer/03 - Desenvolvimento de APIs com Flask/blog/tests/: test_utils.py
02 - Python Backend Developer/03 - Desenvolvimento de APIs com Flask/dio_bank/: app.py  pyproject.toml
02 - Python Backend Developer/03 - Desenvolvimento de APIs com Flask/dio_bank/src/: app.py
(+37 files in other folders)
