[project]
name = "blog"
version = "0.1.0"
description = ""
authors = [
    {name = "yurihellmann",email = "yurihellmann88@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)",
    "pytest",
    "sqlalchemy-orm (>=1.2.10,<2.0.0)"
]

[tool.poetry]
packages = [{include = "blog", from = "src"}]

# pyproject.toml
[tool.pytest.ini_options]
addopts = "-vvv"
testpaths = ["tests"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
